css/main.css
/* ... */
.simulador__aside__header__close:hover {
  text-decoration: none;
  color: #fff
}

.simulador__aside__body {
  margin-top: 20px;
  flex: 1 0 0;
  overflow-y: auto;
}

.simulador__aside__body::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #1d1d1d;
}

.simulador__aside__body::-webkit-scrollbar {
  border-radius: 5px;
  width: 10px;
  background-color: #00c0ef;
}

.simulador__aside__body::-webkit-scrollbar-thumb {
  border-radius: 5px;
  background-color: #000;
}

.simulador__aside__backdrop {
  position: fixed;
  background: transparent;
  height: 100%;
  width: 100%;
  top: 0;
  transition: all 0.2s linear;
  z-index: -1;
  right: 0;
  bottom: 0;
  cursor: pointer;
}

.simulador__aside__backdrop--open {
  z-index: 1000;
  background: rgba(0, 0, 0, 0.5);
}

.simulador__aside__backdrop__body--open {
  overflow: hidden
}

/*  .screenshot */

.screenshot__list {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center;
}

.screenshot__list__item {
  padding: 5px;
  width: 218px;
  display: inline-block;
  margin: 10px auto 0 auto;
  border: 1px solid transparent
}

.screenshot__list__item:hover {
  border: 1px solid rgba(0, 76, 255, 1)
}

.screenshot__list__item__title {
  margin: 10px 0;
  text-decoration: none;
  color: var(--color-accent);
  font-size: 0.95rem;
}

.screenshot__list__item__title:hover {
  text-decoration: none;
}

.screenshot__list__item__img__inner {
  width: 100%;
  margin: 0 auto;
  position: relative;
}

.screenshot__list__item__img__inner::before {
  transition: all 0.2s linear;
  background-color: rgba(0, 0, 0, 0.3);
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.screenshot__list__item__img__inner:hover::before {
  background-color: rgba(16, 57, 150, 0)
}

.screenshot__list__item__img {
  max-width: 100%;
}

.screenshot__list__item__link {
  display: block;
  position: relative;
  text-align: center;
}

.simulador__header {
  color: #222326;
  height: 50px;
  width: 100%;
  display: flex;
  align-content: center;
  flex-direction: row;
  align-items: center;
  box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175)!important;
  position: fixed;
  top: 0;
  z-index: 1000;
  background-color: #fff;
}

.simulador__header__hamburguer {
  line-height: 0;
  color: #000;
  height: 50px;
  align-items: center;
  display: flex;
  padding: 0 20px;
  text-decoration: none;
}

.simulador__header__hamburguer:hover {
  text-decoration: none;
}

.simulador__header__brand {
  height: 50px;
  align-items: center;
  display: flex;
}

.simulador__header__brand__image {
  width: 120px;
}

.simulador__header__title {
  height: 50px;
  align-items: center;
  display: none;
}

@media (min-width: 768px) {
  .simulador__header__title {
    display: flex;
  }
}

.simulador__header__title__name {
  margin: 0 20px;
  font-size: 18px;
  font-weight: 700;
  text-transform: uppercase;
}

.simulador__header__title__name strong {
  color: var(--color-accent);
  font-weight: 300;
}

/* .simulador__main {} */

.simulador__content {
  height: calc(100vh - 50px);
  background-color: #eee;
  /* background-image: url("../img/site/patterns/graphy.png") */
}

.simulador__content .product {
  flex: 1 0 auto;
  padding: 20px;
  align-self: center;
  max-width: 1110px;
  margin: 0 auto;
}

.color__list {
  text-align: center;
  margin-bottom: 20px;
}

.color__item {
  border: 1px solid #d2d3d4;
  width: 60px;
  height: 60px;
  padding-top: 10px;
  display: inline-block;
  cursor: pointer;
  border-radius: 4px;
  font-size: 12px;
  transition: all 0.2s;
  margin-right: 5px;
}

.color__item:hover {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.color__choose--closed {
  margin-top: 80px;
}

.is__color-interactive {
  cursor: copy;
  /* cursor: url('../img/site/cursor/select.png'), auto;	 */
  transition: all 0.2s;
  stroke: darkgrey;
  stroke-width: 0.5px;
}

.is__color-interactive:hover {
  opacity: 0.95;
  stroke: grey;
  stroke-width: 1px;
  stroke-linecap: round;
  fill: #b8b8b8;
}

.simulador__content .product svg {
  -webkit-filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.12));
  filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.12));
}

.simulador__content .product svg:hover {
  -webkit-filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.19));
  filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.19));
}

.simulador__content .product>svg {
  max-width: 100%
}

.info {
  position: fixed;
  width: 300px;
  right: 10px;
  bottom: 0;
}

.info__card {
  z-index: 1000;
  bottom: -340px;
  transition: all 0.2s ease-in;
  border: none;
}

.info__card .card-header {
  cursor: pointer;
  color: var(--color-accent);
  background: #020202;
}

.info__card.is_active {
  bottom: 0
}

.info__button {
  right: 20px;
  position: absolute;
  bottom: 0;
  cursor: pointer;
  width: 50px;
  height: 60px;
  text-align: center;
  padding: 8px;
  border-radius: 5px;
  background: #fff;
}

.info__button__image {
  width: 100%;
}

.select2-container {
  z-index: 1070;
}

/*Produto*/

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  /* 1 */
}
/* ... */

